--- a/recipe-book/src/Components/Spinner/style.css
+++ b/recipe-book/src/Components/Spinner/style.css
@@ -3,7 +3,7 @@
 	height: 50px;
 	border-top: 5px solid #0d6efd;
 	border-radius: 50%;
-	animation: spinner 0.5s ease-in-out infinite;
+	animation: spinner 0.75s ease-in infinite;
 }
 .container-fixed {
 	width: 100vw;
@@ -15,6 +15,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-color: rgba(187, 187, 187, 0.712);
+	z-index: 10px;
 }
 
 @keyframes spinner {
